Fix self-alignment of features element
Add a flex of 1
Add width to h3 and increase margins

--- a/styles.css
+++ b/styles.css
@@ -197,9 +197,7 @@
   }
 
   .feature-line > p {
-    display: flex-wrap;
-    align-items: center;
-    justify-content: center;
+    flex: 1;
     
 
   }
@@ -207,14 +205,14 @@
   #Features {
     display: flex;
     flex-direction: column;
-    justify-content: center;
     align-items: center;
-    max-width: 700px;
     margin: 0 auto;
   }
 
   h3 {
-    margin-right: 120px;
+    margin-right: 50px;
+    margin-left: 30px;
+    width: 200px;
     display: flex-wrap;
     align-items: center;
     justify-content: center;
